// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Data Entry/MLInputNumber Basic 1`] = `
<div>
  <div>
    Note that defaultValue will not cause this demo to update.
  </div>
  <div
    class="ant-input-number ant-input-number-sm ml-input-number"
  >
    <div
      class="ant-input-number-handler-wrap"
    >
      <span
        aria-disabled="false"
        aria-label="Increase Value"
        class="ant-input-number-handler ant-input-number-handler-up "
        role="button"
        unselectable="unselectable"
      >
        <i
          aria-label="icon: up"
          class="anticon anticon-up ant-input-number-handler-up-inner"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 0 0 140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </i>
      </span>
      <span
        aria-disabled="false"
        aria-label="Decrease Value"
        class="ant-input-number-handler ant-input-number-handler-down "
        role="button"
        unselectable="unselectable"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-input-number-handler-down-inner"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-input-number-input-wrap"
    >
      <input
        aria-valuemax="100"
        aria-valuemin="0"
        autocomplete="off"
        class="ant-input-number-input"
        max="100"
        min="0"
        role="spinbutton"
        step="1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Data Entry/MLInputNumber Decimals 1`] = `
<div>
  <div>
    Note that defaultValue will not cause this demo to update.
  </div>
  <div
    class="ant-input-number ant-input-number-sm ml-input-number"
  >
    <div
      class="ant-input-number-handler-wrap"
    >
      <span
        aria-disabled="false"
        aria-label="Increase Value"
        class="ant-input-number-handler ant-input-number-handler-up "
        role="button"
        unselectable="unselectable"
      >
        <i
          aria-label="icon: up"
          class="anticon anticon-up ant-input-number-handler-up-inner"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 0 0 140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </i>
      </span>
      <span
        aria-disabled="false"
        aria-label="Decrease Value"
        class="ant-input-number-handler ant-input-number-handler-down "
        role="button"
        unselectable="unselectable"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-input-number-handler-down-inner"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-input-number-input-wrap"
    >
      <input
        aria-valuemax="100"
        aria-valuemin="0"
        autocomplete="off"
        class="ant-input-number-input"
        max="100"
        min="0"
        role="spinbutton"
        step="0.1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Data Entry/MLInputNumber Disabled 1`] = `
<div>
  <div>
    Note that defaultValue will not cause this demo to update.
  </div>
  <div
    class="ant-input-number ant-input-number-sm ml-input-number ant-input-number-disabled"
  >
    <div
      class="ant-input-number-handler-wrap"
    >
      <span
        aria-disabled="true"
        aria-label="Increase Value"
        class="ant-input-number-handler ant-input-number-handler-up "
        role="button"
        unselectable="unselectable"
      >
        <i
          aria-label="icon: up"
          class="anticon anticon-up ant-input-number-handler-up-inner"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 0 0 140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </i>
      </span>
      <span
        aria-disabled="true"
        aria-label="Decrease Value"
        class="ant-input-number-handler ant-input-number-handler-down "
        role="button"
        unselectable="unselectable"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-input-number-handler-down-inner"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-input-number-input-wrap"
    >
      <input
        aria-valuemax="100"
        aria-valuemin="0"
        autocomplete="off"
        class="ant-input-number-input"
        disabled=""
        max="100"
        min="0"
        role="spinbutton"
        step="1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Data Entry/MLInputNumber Formatter 1`] = `
<div>
  <div>
    Note that defaultValue will not cause this demo to update.
  </div>
  <div
    class="ant-input-number ant-input-number-sm ml-input-number ant-input-number-disabled"
  >
    <div
      class="ant-input-number-handler-wrap"
    >
      <span
        aria-disabled="true"
        aria-label="Increase Value"
        class="ant-input-number-handler ant-input-number-handler-up "
        role="button"
        unselectable="unselectable"
      >
        <i
          aria-label="icon: up"
          class="anticon anticon-up ant-input-number-handler-up-inner"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 0 0 140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </i>
      </span>
      <span
        aria-disabled="true"
        aria-label="Decrease Value"
        class="ant-input-number-handler ant-input-number-handler-down "
        role="button"
        unselectable="unselectable"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-input-number-handler-down-inner"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-input-number-input-wrap"
    >
      <input
        aria-valuemax="100"
        aria-valuemin="0"
        autocomplete="off"
        class="ant-input-number-input"
        disabled=""
        max="100"
        min="0"
        role="spinbutton"
        step="1"
        value="%"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Data Entry/MLInputNumber Sizes 1`] = `
<div>
  <div>
    Note that defaultValue will not cause this demo to update.
  </div>
  <div
    class="ant-input-number ant-input-number-sm ml-input-number ant-input-number-disabled"
  >
    <div
      class="ant-input-number-handler-wrap"
    >
      <span
        aria-disabled="true"
        aria-label="Increase Value"
        class="ant-input-number-handler ant-input-number-handler-up "
        role="button"
        unselectable="unselectable"
      >
        <i
          aria-label="icon: up"
          class="anticon anticon-up ant-input-number-handler-up-inner"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 0 0 140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </i>
      </span>
      <span
        aria-disabled="true"
        aria-label="Decrease Value"
        class="ant-input-number-handler ant-input-number-handler-down "
        role="button"
        unselectable="unselectable"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-input-number-handler-down-inner"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-input-number-input-wrap"
    >
      <input
        aria-valuemax="100"
        aria-valuemin="0"
        autocomplete="off"
        class="ant-input-number-input"
        disabled=""
        max="100"
        min="0"
        role="spinbutton"
        step="1"
        value="%"
      />
    </div>
  </div>
  <div
    class="ant-input-number ml-input-number ant-input-number-disabled"
  >
    <div
      class="ant-input-number-handler-wrap"
    >
      <span
        aria-disabled="true"
        aria-label="Increase Value"
        class="ant-input-number-handler ant-input-number-handler-up "
        role="button"
        unselectable="unselectable"
      >
        <i
          aria-label="icon: up"
          class="anticon anticon-up ant-input-number-handler-up-inner"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 0 0 140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </i>
      </span>
      <span
        aria-disabled="true"
        aria-label="Decrease Value"
        class="ant-input-number-handler ant-input-number-handler-down "
        role="button"
        unselectable="unselectable"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-input-number-handler-down-inner"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-input-number-input-wrap"
    >
      <input
        aria-valuemax="100"
        aria-valuemin="0"
        autocomplete="off"
        class="ant-input-number-input"
        disabled=""
        max="100"
        min="0"
        role="spinbutton"
        step="1"
        value="%"
      />
    </div>
  </div>
  <div
    class="ant-input-number ant-input-number-lg ml-input-number ant-input-number-disabled"
  >
    <div
      class="ant-input-number-handler-wrap"
    >
      <span
        aria-disabled="true"
        aria-label="Increase Value"
        class="ant-input-number-handler ant-input-number-handler-up "
        role="button"
        unselectable="unselectable"
      >
        <i
          aria-label="icon: up"
          class="anticon anticon-up ant-input-number-handler-up-inner"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 0 0 140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </i>
      </span>
      <span
        aria-disabled="true"
        aria-label="Decrease Value"
        class="ant-input-number-handler ant-input-number-handler-down "
        role="button"
        unselectable="unselectable"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-input-number-handler-down-inner"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-input-number-input-wrap"
    >
      <input
        aria-valuemax="100"
        aria-valuemin="0"
        autocomplete="off"
        class="ant-input-number-input"
        disabled=""
        max="100"
        min="0"
        role="spinbutton"
        step="1"
        value="%"
      />
    </div>
  </div>
</div>
`;
